fix image alignment and add hyperlinks back to the homepage

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,31 @@
 h1{
   text-align: center;
   color: #C0C0C0;
-  font-style: oblique 80deg;
 }
 
 .hyperlinks{
   text-align: center;
   font-size: 32.10px;
   font-style: bold;
-
 }
+.hyperlinks2{
+  text-align: center;
+  font-size: 24px;
+  font-style: bold;
+}
+
 a{
   color: #708090;
+}
+.hut{
+  border-radius: 50px;
+  text-align: center;
+
 }
 
 p{
   text-align: center;
   color: #C0C0C0;
-  font-size: 24px;
 }
 
 .description{
@@ -31,18 +39,14 @@ li{
 }
 
 .img{
-  image-orientation: center;
   border-radius: 50%;
   display: block;
   margin: 0 auto;
 }
 
 .swim{
-  text-align: center;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-
+  margin: 0 auto;
 }
 
 body{
